Basic logical date parser